# softmax

./: .Solver_SOFTMAX.cpp.swp  .Solver_SOFTMAX.h.swp  .gitignore  .linear.cpp.swp  CMakeCache.txt  CMakeLists.txt  Function_SOFTMAX.cpp  Function_SOFTMAX.h  Makefile  Solver_ADMM.cpp  Solver_ADMM.h  Solver_ADMM2.cpp  Solver_ADMM2.h  Solver_ALM.cpp  Solver_ALM.h  Solver_ALM_FW.cpp  Solver_ALM_FW.h  Solver_ALM_NEWTON.cpp  Solver_ALM_NEWTON.h  Solver_BLG.cpp  Solver_BLG.h  Solver_CD_DUAL.cpp  Solver_CD_DUAL.h  Solver_EG.cpp  Solver_EG.h  Solver_FW.cpp  Solver_FW.h  Solver_MB_ALM.cpp  Solver_ME_DUAL.cpp  Solver_ME_DUAL.h  Solver_NEW.cpp  Solver_NEW.h  Solver_SGD.cpp  Solver_SGD.h  Solver_SOFTMAX.cpp  Solver_SOFTMAX.h  cmake_install.cmake  exp.py  exp_ALM.py  exp_BLG.py  (+8 more)
BLG/: BLG.cpp  BLG.h  BLG_user.h  driver.cpp  driver.h
model/: a9a.model  pendigits.model  real-sim.model  usps.model
output/: a9a  pendigits  real-sim  usps
